# markpbaggett.github.io

./: .gitignore  README.rst  archives.html  authors.html  categories.html  hello-world.html  iiif-id-property.html  impact-of-collection-level-oai-records.html  implementing-navplace.html  index.html  index2.html  libcal-borg-singleton.html  my-super-post.html  pelicanconf.py  poetry_on_m1.html  publishconf.py  pyproject.toml  seo_report.html  sitemap.xml  tags.html
author/: mark-baggett.html  mark-baggett2.html
category/: analytics-python.html  analytics.html  iiif.html  misc.html  python.html  yeah.html
content/: exploring_search_terms.rst  georectification_with_all_maps.rst  hello_world.rst  iiif_id_prop.rst  impact_of_collection_level_oai_records.rst  implementing_navPlace.rst  poetry_on_m1.rst  using_the_borg.rst
content/pages/: about.rst
drafts/: iiif-id-property.html  impact-of-collection-level-oai-records.html  implementing-navplace.html  revisiting-rfta-artists.html
feeds/: all.atom.xml  iiif.atom.xml  misc.atom.xml  python.atom.xml
pages/: about.html
tag/: analytics.html  awesome.html  collections.html  content-state-api.html  discovery.html  iiif.html  libcal.html  m1.html  macbook.html  navplace.html  osx.html  poetry.html  presentation-api.html  python.html  serverless.html  singletons.html  thats.html  wizzard.html
