[tool.poetry]
name = "markpbaggett"
version = "0.1.0"
description = "Blog / CV"
authors = ["Mark Baggett <mbagget1@utk.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
pelican = "^4.8.0"
pelican-social = "^0.2.0"
plumage = {git = "https://github.com/kdeldycke/plumage", rev = "develop"}
ghp-import = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
